using zod for validation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
     "no-unused-expressions": "error",
     "prefer-const": "error",
     "no-undef": "error",
-    "no-console": "warn"
+    "no-console": "warn",
+    "@typescript-eslint/no-explicit-any": 0
   },
   "globals": {
     "process": "readonly"
